Update for issue processwire/processwire-issues#14 to update CSS for long description or notes that have no spaces (like URLs or emails) so that they wrap rather than overflow.

--- a/wire/modules/AdminTheme/AdminThemeDefault/styles/sass/_mixins.scss
+++ b/wire/modules/AdminTheme/AdminThemeDefault/styles/sass/_mixins.scss
@@ -15,3 +15,12 @@
 	background: linear-gradient(top, $top 0%, $bottom 100%); /* W3C */
 }
 
+@mixin word-wrap() {
+	overflow-wrap: break-word;
+	word-break: break-word;
+	word-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
+}
+
